# rhino_mcp

./: .gitignore  LICENSE  README  README.md  Test_ClaudeRhino.3dm  Test_ClaudeRhino.3dm.rhl  pyproject.toml  requirements.txt  rhino_script.py  test.html
.github/workflows/: python-publish.yml
rhino_mcp/: __init__.py  grasshopper_tools.py  replicate_tools.py  rhinoScriptSyntax.md  rhino_tools.py  server.py  server_sse.py  web_server.py
rhino_mcp/resources/: rhino_script_categories.py
