[project]
name = "reer-rhino-mcp"
version = "0.1.3"
description = "Rhino MCP Server"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "REER Rhino MCP Team"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "mcp[cli]>=1.3.0",
]

[project.scripts]
rhino-mcp = "rhino_mcp.server:main"
rhino-web = "rhino_mcp.web_server:main"
reer-rhino-web = "rhino_mcp.web_server:main"
reer-rhino-mcp = "rhino_mcp.server:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "."} 