[project]
name = "reer-rhino-mcp"
version = "0.1.8"
description = "Rhino MCP Server"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "REER Rhino MCP Team"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "mcp[cli]>=1.3.0",
    "fastapi>=0.95.0",
    "uvicorn>=0.21.0",
    "pillow>=9.4.0",
    "requests>=2.28.0",
    "python-dotenv>=0.21.0",
    "starlette>=0.27.0",
]

[project.scripts]
rhino-mcp = "rhino_mcp.server:main"
rhino-web = "rhino_mcp.web_server:main"
reer-rhino-web = "rhino_mcp.web_server:main"
reer-rhino-mcp = "rhino_mcp.server:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "."} 